tests/parser-test-files/bad-files/parse-pattern.2.error
error: Invalid match branch
  --> test:5:7
   |
 5 |    (let (x y . z) = g)
   |         ^^^^^^^^^ unexpected dotted list
